--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
   <head>
     <meta content="text/html; charset=windows-1252" http-equiv="content-type">
     <title>index</title>
-  </head>
+    <style type="text/css">
+#run:hover {
+}
+
+</style></head>
   <body>
     <table style="width: 1214px; height: 107px;" border="1">
       <tbody>
         <tr>
-          <td style="background-color: white; text-align: center;"><a href="file:///C:/Users/efya/Documents/salford/index.html"><span
+          <td style="background-color: #cc0000; text-align: center;"><a href="file:///C:/Users/efya/Documents/salford/index.html"><span
                 style="font-weight: bold;">HOME</span></a></td>
-          <td style="background-color: white; text-align: center;"><span style="font-weight: bold;"><a
+          <td style="background-color: #cc0000; text-align: center;"><span style="font-weight: bold;"><a
                 href="file:///C:/Users/efya/Documents/salford/aboutus.html">ABOUT
                 US</a></span></td>
-          <td style="background-color: white; text-align: center;"><span style="font-weight: bold;"><a
+          <td style="background-color: #cc0000; text-align: center;"><span style="font-weight: bold;"><a
                 href="file:///C:/Users/efya/Documents/salford/contactus.html">CONTACT
                 US</a></span></td>
         </tr>
       </tbody>
     </table>
-    <h1 style=" background-color: white; text-align: center;">WELCOME&nbsp; </h1>
+    <h1 id="run" style="background-color: white; text-align: center;">WELCOME&nbsp;
+      </h1>
     <p style="background-color: white;"> Hello and welcome the my website. This
       website has every information that you need to know about Michael
       Salford.Though its not every information that you need can be found here
@@ -33,6 +38,14 @@
         &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span></p>
     <div style="text-align: center;"><img title="hmpage" alt="" src="images/IMG-20160427-WA0009.jpg"><br>
+      <table style="width: 1197px; height: 77px;" border="1">
+        <tbody>
+          <tr>
+            <td style="background-color: #cc0000;"><br>
+            </td>
+          </tr>
+        </tbody>
+      </table>
       <br>
     </div>
   </body>
