--- a/aboutus.html
+++ b/aboutus.html
@@ -9,13 +9,13 @@
       border="1">
       <tbody>
         <tr>
-          <td style="text-align: center; background-color: white;"><span style="color: #ffff66;"><a
-                style="font-weight: bold;" href="file:///C:/Users/efya/Documents/salford/index.html">HOME</a></span></td>
-          <td style="text-align: center; background-color: white;"><span style="color: #ffff66;"><span
-                style="font-weight: bold;"><a href="file:///C:/Users/efya/Documents/salford/aboutus.html">ABOUT
+          <td style="text-align: center;"><span style="color: #ffff66;"><a style="font-weight: bold;"
+                href="file:///C:/Users/efya/Documents/salford/index.html">HOME</a></span></td>
+          <td style="text-align: center;"><span style="color: #ffff66;"><span style="font-weight: bold;"><a
+                  href="file:///C:/Users/efya/Documents/salford/aboutus.html">ABOUT
                   US</a></span></span></td>
-          <td style="text-align: center; background-color: white;"><span style="color: #ffff66;"><span
-                style="font-weight: bold;"><a href="file:///C:/Users/efya/Documents/salford/contactus.html">CONTACT
+          <td style="text-align: center;"><span style="color: #ffff66;"><span style="font-weight: bold;"><a
+                  href="file:///C:/Users/efya/Documents/salford/contactus.html">CONTACT
                   US</a></span></span></td>
         </tr>
       </tbody>
@@ -31,7 +31,15 @@
       easy i still keep the urge to keep fighting to last end and that is what
       alwasy keeps me going and i always thank Jehovah God for my life and
       blessings through my life and the urge to keep going.</p>
-    <br>
+    <table style="width: 1215px; height: 99px; text-align: left; margin-left: 0px; margin-right: auto;"
+      border="0">
+      <tbody>
+        <tr>
+          <td style="background-color: #cc0000;"><br>
+          </td>
+        </tr>
+      </tbody>
+    </table>
     <p style="text-align: left;"><br>
     </p>
   </body>
